# mcos-decoder

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: halmstad_quickstart.py
mcos_decoder/: __init__.py  groundtruth.py  stream.py
paper/: build.sh  main.tex
tests/: test_basic.py
