[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcos-decoder"
version = "0.1.0"
description = "Decode MATLAB MCOS objects (Computer Vision Toolbox groundTruth, labelData, etc.) from .mat files in pure Python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Burak Ozdemir", email = "bozdemir@gmail.com" }
]
keywords = ["matlab", "mat-file", "mcos", "groundtruth", "computer-vision", "labels"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/bozdemir/mcos-decoder"
Issues = "https://github.com/bozdemir/mcos-decoder/issues"
Source = "https://github.com/bozdemir/mcos-decoder"

[tool.setuptools.packages.find]
include = ["mcos_decoder*"]
